Closed
Bug 493673
Opened 16 years ago
Closed 16 years ago
Videos with an audio track shorter than the video track stop when audio playback is completed
Categories
(Core :: Audio/Video, defect)
Core
Audio/Video
Tracking
()
RESOLVED
FIXED
People
(Reporter: cajbir, Assigned: cajbir)
References
()
Details
(Keywords: fixed1.9.1)
Attachments
(1 file)
|
1.93 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Because a/v sync is based on the audio playback clock, when no more audio data is played the video stops playing.
Steps to reproduce
==================
1. Load video in URL
2. Press Play
What Happens
=============
Video does not play
What should happen
==================
Video should play
The video in the URL has an audio track of less than a second. Playback stops once this data is played.
Flags: wanted1.9.1?
| Assignee | ||
Comment 1•16 years ago
|
||
If there is no audio data in the frame write a frame's worth of silence.
Assignee: nobody → chris.double
Status: NEW → ASSIGNED
Attachment #378233 -
Flags: superreview?(roc)
Attachment #378233 -
Flags: review?(roc)
Attachment #378233 -
Flags: superreview?(roc)
Attachment #378233 -
Flags: superreview+
Attachment #378233 -
Flags: review?(roc)
Attachment #378233 -
Flags: review+
Flags: wanted1.9.1? → wanted1.9.1+
Whiteboard: [needs landing]
We should be able to have a test here quite easily.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Whiteboard: [needs landing] → [needs 191 landing]
Comment 4•16 years ago
|
||
I'm seeing quite a few of these video bugs saying we need test cases. Are we marking them somehow with a promise of actually adding tests?
The testcase? flag.
Keywords: fixed1.9.1
Whiteboard: [needs 191 landing]
You need to log in
before you can comment on or make changes to this bug.
Description
•